Change keyword "percent" on mobile

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         <p>60</p>
       </div>
       <div class="col-2">
-        <h5>PERCENT</h5>
+        <h5 class="large-screen">PERCENT</h5>
+        <h5 class="small-screen">%</h5>
         <input type="text" class="input-sm form-control input1" maxlength="5">
         <input type="text" class="input-sm form-control input2" maxlength="5">
         <input type="text" class="input-sm form-control input3" maxlength="5">
