Added error checking and updated to use jquery

--- a/index.html
+++ b/index.html
@@ -66,20 +66,20 @@
       <div class="col-2">
         <h5 class="large-screen">PERCENT</h5>
         <h5 class="small-screen">%</h5>
-        <input type="text" class="input-sm form-control input1" maxlength="5">
-        <input type="text" class="input-sm form-control input2" maxlength="5">
-        <input type="text" class="input-sm form-control input3" maxlength="5">
-        <input type="text" class="input-sm form-control input4" maxlength="5">
-        <input type="text" class="input-sm form-control input5" maxlength="5">
-        <input type="text" class="input-sm form-control input6" maxlength="5">
-        <input type="text" class="input-sm form-control input7" maxlength="5">
-        <input type="text" class="input-sm form-control input8" maxlength="5">
-        <input type="text" class="input-sm form-control input9" maxlength="5">
+        <input type="text" class="form-control input" maxlength="5">
+        <input type="text" class="form-control input" maxlength="5">
+        <input type="text" class="form-control input" maxlength="5">
+        <input type="text" class="form-control input" maxlength="5">
+        <input type="text" class="form-control input" maxlength="5">
+        <input type="text" class="form-control input" maxlength="5">
+        <input type="text" class="form-control input" maxlength="5">
+        <input type="text" class="form-control input" maxlength="5">
+        <input type="text" class="form-control input" maxlength="5">
       </div>
     </div>
     </form>
     <div class="calculate-button">
-      <button type="button" class="btn btn-outline-secondary btn-lg">CALCULATE</button>
+      <a href="#result-section" class="btn btn-outline-secondary btn-lg" role="button">CALCULATE</a>
     </div>
   </section>
   <section id="result-section">
@@ -107,6 +107,7 @@
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="index.js" charset="utf-8"></script>
 </body>
 
